--- a/chp_api/Dockerfile
+++ b/chp_api/Dockerfile
@@ -8,20 +8,10 @@ FROM python:3.8 as intermediate
 # set work directory
 WORKDIR /usr/src/chp_api
 
-# install git
-#RUN apt-get update \
-#	&& apt-get install -y git python3-pip python3-dev
-#dos2unix
-
 RUN git clone --single-branch --branch master https://github.com/di2ag/trapi_model.git
 RUN git clone --single-branch --branch master https://github.com/di2ag/chp_utils.git
 RUN git clone --single-branch --branch master https://github.com/di2ag/chp_look_up.git
 RUN git clone --single-branch --branch master https://github.com/di2ag/gene-specificity.git
-
-# lint
-#RUN pip install --upgrade pip
-#RUN pip3 install flake8 wheel
-#COPY . .
 
 # install dependencies
 COPY ./requirements.txt .
@@ -64,27 +54,15 @@ ENV TZ=America/New_York
 # set ARGs
 ARG DEBIAN_FRONTEND=noninterative
 
-# install dependencies
-#RUN apt-get update \
-#	&& apt-get install -y python3-pip graphviz openmpi-bin libopenmpi-dev build-essential libssl-dev libffi-dev python3-dev 
-#RUN apt-get install -y libgraphviz-dev python3-pygraphviz
-#RUN apt-get install -y libpq-dev
-#RUN apt-get install -y netcat
-
 # copy repo to new image
 COPY --from=intermediate /usr/src/chp_api/wheels /wheels
 COPY --from=intermediate /usr/src/chp_api/requirements.txt .
-#RUN pip3 install --upgrade pip
-#RUN python3 -m pip install --upgrade pip
 RUN pip3 install --no-cache /wheels/*
 
-# copy entry point
-#COPY ./entrypoint.sh $APP_HOME
-
 # copy project
-COPY ./chp_api/chp_api $APP_HOME/chp_api
-COPY ./chp_api/manage.py $APP_HOME
-COPY ./chp_api/dispatcher $APP_HOME/dispatcher
+COPY ./chp_api $APP_HOME/chp_api
+COPY ./manage.py $APP_HOME
+COPY ./dispatcher $APP_HOME/dispatcher
 COPY ./gunicorn.config.py $APP_HOME
 
 # chown all the files to the app user
@@ -93,6 +71,3 @@ RUN chown -R chp_api:chp_api $APP_HOME \
 
 # change to the app user
 USER chp_api
-
-# run entrypoint.sh
-#ENTRYPOINT ["/home/chp_api/web/entrypoint.sh"]
