--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -33,4 +33,11 @@ server {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
   }
   
+  location /flower-dashboard {
+    proxy_pass http://$FLOWER_DASHBOARD_ADDR;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+  
 }
