--- a/chp_api/Dockerfile
+++ b/chp_api/Dockerfile
@@ -48,11 +48,11 @@ COPY --from=intermediate /usr/src/chp_api/requirements.txt .
 RUN pip3 install --no-cache /wheels/*
 
 # copy project
-COPY ./chp_api/chp_api $APP_HOME/chp_api
-COPY ./chp_api/manage.py $APP_HOME
-COPY ./chp_api/dispatcher $APP_HOME/dispatcher
+COPY ./chp_api $APP_HOME/chp_api
+COPY ./manage.py $APP_HOME
+COPY ./dispatcher $APP_HOME/dispatcher
 COPY ./gennifer $APP_HOME/gennifer
-COPY ./chp_db_fixture.json.gz $APP_HOME
+#COPY ./chp_db_fixture.json.gz $APP_HOME
 COPY ./gunicorn.config.py $APP_HOME
 
 # chown all the files to the app user
