--- a/compose.chp-api.yaml
+++ b/compose.chp-api.yaml
@@ -49,6 +49,8 @@ services:
       - DJANGO_SUPERUSER_USERNAME_FILE=/run/secrets/django-superuser-username
       - DJANGO_SUPERUSER_EMAIL_FILE=/run/secrets/django-superuser-email
       - DJANGO_SUPERUSER_PASSWORD_FILE=/run/secrets/django-superuser-password
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
         # Uncomment this for production
         #- DJANGO_SETTINGS_MODULE=mysite.settings.production
         # Comment this for development
@@ -91,10 +93,9 @@ services:
       - DJANGO_SUPERUSER_USERNAME_FILE=/run/secrets/django-superuser-username
       - DJANGO_SUPERUSER_EMAIL_FILE=/run/secrets/django-superuser-email
       - DJANGO_SUPERUSER_PASSWORD_FILE=/run/secrets/django-superuser-password
-    command: celery -A chp_api worker --loglevel=info
-    environment:
-        - CELERY_BROKER_URL=redis://redis:6379/0
-        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    command: celery -A chp_api worker -Q chp_api --loglevel=info
     depends_on:
         - api
         - redis
@@ -122,12 +123,11 @@ services:
       - DJANGO_SUPERUSER_USERNAME_FILE=/run/secrets/django-superuser-username
       - DJANGO_SUPERUSER_EMAIL_FILE=/run/secrets/django-superuser-email
       - DJANGO_SUPERUSER_PASSWORD_FILE=/run/secrets/django-superuser-password
-    command: celery -A chp_api flower --port=5555 --broker=redis://redis:6379/0
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    command: celery -A chp_api --broker=redis://redis:6379/0 flower --port=5555
     ports:
         - 5556:5555
-    environment:
-        - CELERY_BROKER_URL=redis://redis:6379/0
-        - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
         - api
         - redis
