--- a/compose.gennifer.yaml
+++ b/compose.gennifer.yaml
@@ -25,7 +25,7 @@ services:
     build: 
         context: ./gennifer/pidc
         dockerfile: Dockerfile
-    command: celery --app pidc.tasks.celery worker --loglevel=info
+    command: celery --app pidc.tasks.celery worker -Q pidc --loglevel=info
     environment:
         - CELERY_BROKER_URL=redis://redis:6379/0
         - CELERY_RESULT_BACKEND=redis://redis:6379/0
@@ -37,7 +37,7 @@ services:
     build: 
         context: ./gennifer/pidc
         dockerfile: Dockerfile
-    command: celery --app pidc.tasks.celery flower --port=5555 --broker=redis://redis:6379/0
+    command: celery --app pidc.tasks.celery --broker=redis://redis:6379/0 flower --port=5555 
     ports:
         - 5557:5555
     environment:
