Made necessary changes to helm deployment and chp settings. Probably need to add new secret for django user.

--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -49,6 +49,8 @@ pipeline {
                     sh 'cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/'
                     docker.build(env.DOCKER_REPO_NAME, "--no-cache ./deploy/chp-api/nginx")
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-nginx")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache ./deploy/chp-api/static-file-server")
+                    docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-staticfs")
                 }
             }
         }
