--- a/deploy/chp-api/templates/secret.yaml
+++ b/deploy/chp-api/templates/secret.yaml
@@ -9,3 +9,4 @@ stringData:
   sql_username: {{ .Values.db.username }}
   sql_password: {{ .Values.db.password }}
   secret_key: {{ .Values.app.secret_key }}
+  django_superuser_password: {{ .Values.app.djangoSuperuserPassword }}
