--- a/deploy/chp-api/configs/nginx.conf
+++ b/deploy/chp-api/configs/nginx.conf
@@ -2,6 +2,10 @@ upstream chp_api_app {
     server localhost:8000;
 }
 
+upstream chp_staticfs {
+    server localhost:8080;
+}
+
 server {
 
     listen 80;
@@ -16,8 +20,11 @@ server {
         proxy_send_timeout 360;
         proxy_connect_timeout 360;
     }
-
-    location /staticfiles/ {
-	    alias /home/chp_api/web/staticfiles/;
-    }
+  
+  location /static {
+    proxy_pass http://chp_staticfs;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
 }
