--- a/deploy/chp-api/templates/deployment.yaml
+++ b/deploy/chp-api/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["/bin/sh"]
-          args: ["-c", "/bin/bash /home/chp_api/web/entrypoint.sh && gunicorn -c gunicorn.config.py --log-file=- --env DJANGO_SETTINGS_MODULE=chp_api.settings chp_api.wsgi:application --bind 0.0.0.0:8000"]
+          args: ["-c", "gunicorn -c gunicorn.config.py --log-file=- --env DJANGO_SETTINGS_MODULE=chp_api.settings chp_api.wsgi:application --bind 0.0.0.0:8000"]
           ports:
             - name: http-app
               containerPort: 8000
@@ -40,26 +40,30 @@ spec:
                 secretKeyRef:
                   name: {{ include "chp-api.fullname" . }}-secret
                   key: secret_key
-            - name: SQL_DATABASE
+            - name: POSTGRES_DB
               valueFrom:
                 secretKeyRef:
                   name: {{ include "chp-api.fullname" . }}-secret
                   key: sql_database
-            - name: SQL_USER
+            - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
                   name: {{ include "chp-api.fullname" . }}-secret
                   key: sql_username
-            - name: SQL_PASSWORD
+            - name: POSTGRES_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: {{ include "chp-api.fullname" . }}-secret
                   key: sql_password
+            - name: DJANGO_SUPERUSER_PASSWORD
+              secretKeyRef:
+                  name: {{ include "chp-api.fullname" . }}-secret
+                  key: django_superuser_password
             - name: SQL_ENGINE
               value: "{{ .Values.db.engine }}"
-            - name: SQL_HOST
+            - name: POSTGRES_HOST
               value: "{{ .Values.db.host }}"
-            - name: SQL_PORT
+            - name: POSTGRES_PORT
               value: "{{ .Values.db.port }}"
             - name: DATABASE
               value: "{{ .Values.db.type }}"
@@ -69,6 +73,10 @@ spec:
               value: "{{ .Values.app.djangoAllowedHosts }}"
             - name: DJANGO_SETTINGS_MODULE
               value: "{{ .Values.app.djangoSettingsModule }}"
+            - name: DJANGO_SUPERUSER_USERNAME=chp_admin
+              value: "{{ .Values.app.djangoSuperuserUsername }}"
+            - name: DJANGO_SUPERUSER_EMAIL
+              value: "{{ .Values.app.djangoSuperuserEmail }}"
         - name: {{ .Chart.Name }}-nginx
           securityContext:
             {{- toYaml .Values.securityContextNginx | nindent 12 }}
@@ -84,6 +92,23 @@ spec:
             - name: config-vol
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: nginx.conf
+        - name: {{ .Chart.Name }}-staticfs
+          securityContext:
+            {{- toYaml .Values.securityContextStaticfs | nindent 12 }}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.staticfsTag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - name: http-staticfs
+              containerPort: 8080
+              protocol: TCP
+          volumeMounts:
+            - name: {{ include "chp-api.fullname" . }}-pvc
+              mountPath: /var/www/static
+          env:
+            - name: FOLDER
+              value: "{{ .Values.app.staticfsFolder }}"
+            - name: DEBUG
+              value: "{{ .Values.app.staticfsDebug }}"
       volumes:
         - name: config-vol
           configMap:
