--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -49,7 +49,10 @@ pipeline {
                     sh 'cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/'
                     docker.build(env.DOCKER_REPO_NAME, "--no-cache ./deploy/chp-api/nginx")
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-nginx")
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache ./deploy/chp-api/static-file-server")
+                    sh ```
+                        docker pull halverneus/static-file-server:latest
+                        docker tag halverneus/static-file-server:latest env.DOCKER_REPO_NAME
+                    ```
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-staticfs")
                 }
             }
