--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -51,7 +51,7 @@ pipeline {
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-nginx")
                     sh '''
                         docker pull halverneus/static-file-server:latest
-                        docker tag halverneus/static-file-server:latest env.DOCKER_REPO_NAME
+                        docker tag halverneus/static-file-server:latest $DOCKER_REPO_NAME
                     '''
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}-staticfs")
                 }
