--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -66,9 +66,11 @@ pipeline {
                     configFile(fileId: 'prepare.sh', targetLocation: 'deploy/chp-api/prepare.sh')
                 ]){
                     script {
-                      sh '''
+                      sh '''#!/bin/bash
                       aws --region ${AWS_REGION} eks update-kubeconfig --name ${KUBERNETES_CLUSTER_NAME}
-                      cd deploy/chp-api && /bin/bash prepare.sh && /bin/bash deploy.sh
+                      cd deploy/chp-api 
+                      source prepare.sh 
+                      /bin/bash deploy.sh
                       '''
                     }
                 }
