--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -75,12 +75,12 @@ pipeline {
                     }
                 }
             }
-            // post {
-            //     always {
-            //         echo " Clean up the workspace in deploy node!"
-            //         cleanWs()
-            //     }
-            // }
+            post {
+                always {
+                    echo " Clean up the workspace in deploy node!"
+                    cleanWs()
+                }
+            }
         }
     }
 }
