--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,8 @@ services:
       - django-superuser-email
       - django-superuser-password
     environment:
-      - POSTGRES_DB=chp_db
-      - POSTGRES_USER=postgres
+      - POSTGRES_DB=chpapi
+      - POSTGRES_USER=chpapi_user
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
@@ -70,18 +70,18 @@ services:
   db:
     image: postgres
     restart: always
-    user: postgres
     secrets:
       - db-password
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=chp_db
+      - POSTGRES_DB=chpapi
+      - POSTGRES_USER=chpapi_user
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
       - 5432
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: [ "CMD", "pg_isready -d chpapi -U chpapi_user" ]
       interval: 10s
       timeout: 5s
       retries: 5
