--- a/deploy/chp-api/templates/deployment.yaml
+++ b/deploy/chp-api/templates/deployment.yaml
@@ -113,7 +113,8 @@ spec:
           configMap:
             name: {{ include "chp-api.fullname" . }}-configs
         - name: static-vol
-          configMap: {{ include "chp-api.fullname" . }}-static
+          configMap: 
+            name: {{ include "chp-api.fullname" . }}-static
       {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
