feat: update deployment.yaml

--- a/deploy/chp-api/templates/deployment.yaml
+++ b/deploy/chp-api/templates/deployment.yaml
@@ -113,7 +113,8 @@ spec:
           configMap:
             name: {{ include "chp-api.fullname" . }}-configs
         - name: static-vol
-          emptyDir: {}
+          persistentVolumeClaim:
+            claimName: {{ include "chp-api.fullname" . }}-pvc
       {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
