Update from dev machine.

--- a/compose.gennifer.yaml
+++ b/compose.gennifer.yaml
@@ -20,7 +20,7 @@ services:
     command: flask --app pidc run --debug --host 0.0.0.0
     depends_on:
         - redis
-
+ 
   worker-pidc:
     build: 
         context: ./gennifer/pidc
@@ -31,6 +31,101 @@ services:
         - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
         - pidc
+        - redis
+ 
+  grisli:
+    build: 
+        context: ./gennifer/grisli
+        dockerfile: Dockerfile
+    restart: always
+    user: gennifer_user
+    ports:
+        - 5005:5000
+    secrets:
+        - gennifer_key
+    environment:
+        - SECRET_KEY_FILE=/run/secrets/gennifer_key
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+        - PYTHONUNBUFFERED=1
+          #command: gunicorn -c gunicorn.config.py -b 0.0.0.0:5000 'pidc:create_app()'
+    command: flask --app grisli run --debug --host 0.0.0.0
+    depends_on:
+        - redis
+
+  worker-grisli:
+    build: 
+        context: ./gennifer/grisli
+        dockerfile: Dockerfile
+    command: celery --app grisli.tasks.celery worker -Q grisli --loglevel=info
+    environment:
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+        - PYTHONUNBUFFERED=1
+    depends_on:
+        - grisli
+        - redis
+
+  genie3:
+    build:
+        context: ./gennifer/genie3
+        dockerfile: Dockerfile
+    restart: always
+    user: gennifer_user
+    ports:
+        - 5006:5000
+    secrets:
+        - gennifer_key
+    environment:
+        - SECRET_KEY_FILE=/run/secrets/gennifer_key
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+          #command: gunicorn -c gunicorn.config.py -b 0.0.0.0:5000 'genie3:create_app()'
+    command: flask --app genie3 run --debug --host 0.0.0.0
+    depends_on:
+        - redis
+
+  worker-genie3:
+    build:
+        context: ./gennifer/genie3
+        dockerfile: Dockerfile
+    command: celery --app genie3.tasks.celery worker -Q genie3 --loglevel=info
+    environment:
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    depends_on:
+        - genie3
+        - redis
+
+  grnboost2:
+    build:
+        context: ./gennifer/grnboost2
+        dockerfile: Dockerfile
+    restart: always
+    user: gennifer_user
+    ports:
+        - 5007:5000
+    secrets:
+        - gennifer_key
+    environment:
+        - SECRET_KEY_FILE=/run/secrets/gennifer_key
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+          #command: gunicorn -c gunicorn.config.py -b 0.0.0.0:5000 'grnboost2:create_app()'
+    command: flask --app grnboost2 run --debug --host 0.0.0.0
+    depends_on:
+        - redis
+
+  worker-grnboost2:
+    build:
+        context: ./gennifer/grnboost2
+        dockerfile: Dockerfile
+    command: celery --app grnboost2.tasks.celery worker -Q grnboost2 --loglevel=info
+    environment:
+        - CELERY_BROKER_URL=redis://redis:6379/0
+        - CELERY_RESULT_BACKEND=redis://redis:6379/0
+    depends_on:
+        - grnboost2
         - redis
 
 secrets:
