Nextjs application support.

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -31,6 +31,9 @@ server {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_cache cache;
+    proxy_ignore_headers Cache-Control;
+    proxy_cache_valid 60m;  
   }
   
   location /flower-dashboard {
@@ -38,6 +41,19 @@ server {
     proxy_set_header Host $host;
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  }
+
+  location /_next/static {
+    proxy_cache cache;
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
+  }
+
+  location /api {
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
+  }
+
+  location /chat {
+    proxy_pass http://$NEXTJS_SERVER_ADDR/;
   }
   
 }
