--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,9 +28,19 @@ http {
 
     # Enable Compression
     gzip  on;
+    gzip_proxied any;
+    gzip_comp_level 4;
+    gzip_types text/css application/javascript image/svg+xml;
 
     # Disable Display of NGINX Version
     server_tokens off;
+
+    # Headers
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
 
     # Size Limits
     client_body_buffer_size 10K;
