--- a/compose.chp-api.yaml
+++ b/compose.chp-api.yaml
@@ -94,13 +94,22 @@ services:
       - django-superuser-email
       - django-superuser-password
     environment:
-      - POSTGRES_DB=chp_db
-      - POSTGRES_USER=postgres
+      - POSTGRES_DB=chpapi
+      - POSTGRES_USER=chpapi_user
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
+      - DEBUG=0
+        # For Helm testing purposes
+        #- POSTGRES_PASSWORD=31173e51d8f78b56606d06dfb66a1b126630cdf4711bed9427025d8979976f31
+        #- SECRET_KEY=e1743ca40af220389cd1165d213e3d677f2d59c00d7b0f94e7a302c91f95f029
+        #- DJANGO_ALLOWED_HOSTS=localhost,chp.thayer.dartmouth.edu
+      - CSRF_TRUSTED_ORIGINS=http://localhost,https://chp.thayer.dartmouth.edu
+        #- DJANGO_SUPERUSER_USERNAME=chp_admin
+        #- DJANGO_SUPERUSER_EMAIL=chp_admin@chp.com
+        #- DJANGO_SUPERUSER_PASSWORD=e12ff26f070819d9a72e317898148679680e6b3976e464b4102bd6eb18357919
       - SECRET_KEY_FILE=/run/secrets/django-key
-      - DEBUG=1
+        #- CSRF_TRUSTED_ORIGINS_FILE=/run/secrets/csrf-trusted-origins
       - DJANGO_ALLOWED_HOSTS_FILE=/run/secrets/allowed-hosts
       - DJANGO_SUPERUSER_USERNAME_FILE=/run/secrets/django-superuser-username
       - DJANGO_SUPERUSER_EMAIL_FILE=/run/secrets/django-superuser-email
@@ -124,13 +133,22 @@ services:
       - django-superuser-email
       - django-superuser-password
     environment:
-      - POSTGRES_DB=chp_db
-      - POSTGRES_USER=postgres
+      - POSTGRES_DB=chpapi
+      - POSTGRES_USER=chpapi_user
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
       - POSTGRES_HOST=db
       - POSTGRES_PORT=5432
+      - DEBUG=0
+        # For Helm testing purposes
+        #- POSTGRES_PASSWORD=31173e51d8f78b56606d06dfb66a1b126630cdf4711bed9427025d8979976f31
+        #- SECRET_KEY=e1743ca40af220389cd1165d213e3d677f2d59c00d7b0f94e7a302c91f95f029
+        #- DJANGO_ALLOWED_HOSTS=localhost,chp.thayer.dartmouth.edu
+      - CSRF_TRUSTED_ORIGINS=http://localhost,https://chp.thayer.dartmouth.edu
+        #- DJANGO_SUPERUSER_USERNAME=chp_admin
+        #- DJANGO_SUPERUSER_EMAIL=chp_admin@chp.com
+        #- DJANGO_SUPERUSER_PASSWORD=e12ff26f070819d9a72e317898148679680e6b3976e464b4102bd6eb18357919
       - SECRET_KEY_FILE=/run/secrets/django-key
-      - DEBUG=1
+        #- CSRF_TRUSTED_ORIGINS_FILE=/run/secrets/csrf-trusted-origins
       - DJANGO_ALLOWED_HOSTS_FILE=/run/secrets/allowed-hosts
       - DJANGO_SUPERUSER_USERNAME_FILE=/run/secrets/django-superuser-username
       - DJANGO_SUPERUSER_EMAIL_FILE=/run/secrets/django-superuser-email
