--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -52,8 +52,24 @@ server {
     proxy_pass http://$NEXTJS_SERVER_ADDR;
   }
 
-  location /chat {
+  location /ui {
     proxy_pass http://$NEXTJS_SERVER_ADDR/;
+  }
+  
+  location /dashboard {
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
+  }
+  
+  location /studies {
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
+  }
+
+  location /explore {
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
+  }
+  
+  location /documentation {
+    proxy_pass http://$NEXTJS_SERVER_ADDR;
   }
   
 }
