--- a/deploy/chp-api/templates/deployment.yaml
+++ b/deploy/chp-api/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          {{- with .Values.chp-api.resources }}
+          {{- with .Values.chp_api.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -85,7 +85,7 @@ spec:
             - name: DJANGO_SUPERUSER_EMAIL
               value: "{{ .Values.app.djangoSuperuserEmail }}"
         - name: {{ .Chart.Name }}-nginx
-          {{- with .Values.chp-api-nginx.resources }}
+          {{- with .Values.chp_api_nginx.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -102,7 +102,7 @@ spec:
               mountPath: /etc/nginx/conf.d/default.conf
               subPath: nginx.conf
         - name: {{ .Chart.Name }}-staticfs
-          {{- with .Values.chp-api-staticfs.resources }}
+          {{- with .Values.chp_api_staticfs.resources }}
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
