--- a/deploy/chp-api/values.yaml
+++ b/deploy/chp-api/values.yaml
@@ -76,7 +76,7 @@ ingress:
      
 tolerations: 
   - key: "transltr"
-    value: "chp-api"
+    value: "managed-app"
     operator: "Equal"
     effect: "NoSchedule"
 
@@ -89,9 +89,9 @@ affinity:
           - key: app
             operator: In
             values:
-            - chp-api
+            - managed-app
         topologyKey: "kubernetes.io/hostname"
-  # this ensures pod only runs on node with label application=chp-api
+  # this ensures pod only runs on node with label application=managed-app
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
@@ -99,4 +99,4 @@ affinity:
           - key: application
             operator: In
             values:
-            - chp-api
+            - managed-app
