--- a/deploy/chp-api/Jenkinsfile
+++ b/deploy/chp-api/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
            when { expression { return env.BUILD == 'true' }}
             steps {
                 script {
-                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./Dockerfile ./")
+                    docker.build(env.DOCKER_REPO_NAME, "--no-cache -f ./chp_api/Dockerfile ./")
                     sh 'docker login -u AWS -p $(aws ecr get-login-password --region us-east-1) 853771734544.dkr.ecr.us-east-1.amazonaws.com'
                     docker.image(env.DOCKER_REPO_NAME).push("${BUILD_VERSION}")
                     sh 'cp deploy/chp-api/configs/nginx.conf deploy/chp-api/nginx/'
