Update values.yaml with new affinity

--- a/deploy/chp-api/values.yaml
+++ b/deploy/chp-api/values.yaml
@@ -80,7 +80,7 @@ ingress:
      
 tolerations: 
   - key: "transltr"
-    value: "managed-app"
+    value: "chp"
     operator: "Equal"
     effect: "NoSchedule"
 
@@ -90,10 +90,10 @@ affinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       - labelSelector:
           matchExpressions:
-          - key: app
+          - key: application
             operator: In
             values:
-            - managed-app
+            - chp
         topologyKey: "kubernetes.io/hostname"
   # this ensures pod only runs on node with label application=managed-app
   nodeAffinity:
@@ -103,4 +103,4 @@ affinity:
           - key: application
             operator: In
             values:
-            - managed-app
+            - chp
